@@ -3,10 +3,7 @@ package io.quarkus.resteasy.reactive.server.deployment;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.STRING;
 
 import java.lang.reflect.Modifier;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -42,6 +39,7 @@ import io.quarkus.gizmo.ClassCreator;
 import io.quarkus.gizmo.MethodCreator;
 import io.quarkus.gizmo.MethodDescriptor;
 import io.quarkus.gizmo.ResultHandle;
+import io.quarkus.resteasy.reactive.server.common.runtime.EndpointInvokerFactory;
 import io.quarkus.resteasy.reactive.server.runtime.ResteasyReactiveRecorder;
 import io.vertx.core.http.HttpServerRequest;
 import io.vertx.core.http.HttpServerResponse;
@@ -59,10 +57,10 @@ public class QuarkusServerEndpointIndexer
     private final Map<String, String> multipartGeneratedPopulators = new HashMap<>();
     private final Predicate<String> applicationClassPredicate;
 
-    private static final Set<DotName> CONTEXT_TYPES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+    private static final Set<DotName> CONTEXT_TYPES = Set.of(
             DotName.createSimple(HttpServerRequest.class.getName()),
             DotName.createSimple(HttpServerResponse.class.getName()),
-            DotName.createSimple(RoutingContext.class.getName()))));
+            DotName.createSimple(RoutingContext.class.getName()));
 
     QuarkusServerEndpointIndexer(Builder builder) {
         super(builder);
@@ -111,7 +109,7 @@ public class QuarkusServerEndpointIndexer
     protected boolean handleCustomParameter(Map<DotName, AnnotationInstance> anns, ServerIndexedParameter builder,
             Type paramType, boolean field, Map<String, Object> methodContext) {
         methodContext.put(GeneratedClassBuildItem.class.getName(), generatedClassBuildItemBuildProducer);
-        methodContext.put(ResteasyReactiveRecorder.class.getName(), resteasyReactiveRecorder);
+        methodContext.put(EndpointInvokerFactory.class.getName(), resteasyReactiveRecorder);
         return super.handleCustomParameter(anns, builder, paramType, field, methodContext);
     }
 
